2008-11-22  kitone  <kitone@gna.org>

	* plugins/actions/joindocument/joindocument.cc:
	Move subtitles added after the last original subtitle.

2008-11-20  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/toolongdisplaytime.h:
	* plugins/actions/errorchecking/tooshortdisplaytime.h:
	Remove ngettext for gettext.

2008-11-17  kitone  <kitone@gna.org>

	* src/we/waveformrenderergl.cc:
	Fix: Restore header <gl/gl.h> to <GL/gl.h>.

2008-11-16  kitone  <kitone@gna.org>

	* all files {h,cc}:
	convert all files to lowercase.

2008-11-16  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/cfg.cc:
	* src/cfg.cc:
	Rename file Config to cfg.

	* src/CommandSystem.cc:
	* src/Config.cc:
	* src/Config.h:
	* src/Document.cc:
	* src/Encodings.cc:
	* src/ExtensionManager.cc:
	* src/SubtitleView.cc:
	* src/SubtitleView.h:
	* src/extension/Action.h:
	* src/gui/ComboBoxEncoding.cc:
	* src/gui/ComboBoxVideo.cc:
	* src/gui/DialogCharacterCodings.cc:
	* src/gui/MenuBar.h:
	* src/utility.cc:
	* src/widget_config_utility.cc:
	Update with new cfg filename.

2008-11-16  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/Signal.cc:
	* src/Signal.h:
	Remove files Signal.

	* src/Document.cc:
	* src/Document.h:
	Add Signal code.

	* src/i18n.h:
	* src/utility.h:
	Fix: config header.

2008-11-16  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/i18n.h:
	New file. Move i18n core from utility.

	* plugins/actions/adjusttime/AdjustTime.cc:
	* plugins/actions/applytranslation/ApplyTranslation.cc:
	* plugins/actions/combinesubtitles/CombineSubtitles.cc:
	* plugins/actions/command/Command.cc:
	* plugins/actions/dialoguize/Dialoguize.cc:
	* plugins/actions/duplicatesubtitle/DuplicateSubtitle.cc:
	* plugins/actions/editcell/EditCell.cc:
	* plugins/actions/extendlength/ExtendLength.cc:
	* plugins/actions/insertsubtitle/InsertSubtitle.cc:
	* plugins/actions/italicize/Italicize.cc:
	* plugins/actions/joindocument/JoinDocument.cc: