@@ -1,5 +1,12 @@
 2008-11-22  kitone  <kitone@gna.org>
 
+	* src/player.h:
+	* src/vp/gstreamerplayer.cc:
+	* src/vp/gstreamerplayer.h:
+	Add function get_uri.
+
+2008-11-22  kitone  <kitone@gna.org>
+
 	* plugins/actions/joindocument/joindocument.cc:
 	Move subtitles added after the last original subtitle.
 
